# models/user.go
@@ -6,16 +6,16 @@ import (
 )
 
 var (
-	UserList map[int64]*User
+	UserList map[int64]*Account
 )
 
 func init() {
-	UserList = make(map[int64]*User)
-	u := User{1, "77095729@qq.com", "Derek", "password", 1, time.Now().Format("2006-01-02 15:04:05"), time.Now().Format("2006-01-02 15:04:05")}
+	UserList = make(map[int64]*Account)
+	u := Account{1, "77095729@qq.com", "Derek", "password", 1, time.Now().Format("2006-01-02 15:04:05"), time.Now().Format("2006-01-02 15:04:05")}
 	UserList[1] = &u
 }
 
-type User struct {
+type Account struct {
 	Id         int64  `json:"id"`
 	Email      string `json:"email"`
 	Username   string `json:"username"`
@@ -25,33 +25,33 @@ type User struct {
 	UpdateDate string `json:"update_date"`
 }
 
-func AddUser(u User) int64 {
+func AddUser(u Account) int64 {
 	u.Id = int64(len(UserList) + 1)
 	UserList[u.Id] = &u
 	return u.Id
 }
 
-func GetUser(uid int64) (u *User, err error) {
+func GetUser(uid int64) (u *Account, err error) {
 	if u, ok := UserList[uid]; ok {
 		return u, nil
 	}
-	return nil, errors.New("User not exists")
+	return nil, errors.New("Account not exists")
 }
 
-func GetUserByName(username string) (u *User, err error) {
+func GetUserByName(username string) (u *Account, err error) {
 	for _, u := range UserList {
 		if u.Username == username {
 			return u, nil
 		}
 	}
-	return nil, errors.New("User not exists")
+	return nil, errors.New("Account not exists")
 }
 
-func GetAllUsers() map[int64]*User {
+func GetAllUsers() map[int64]*Account {
 	return UserList
 }
 
-func UpdateUser(uid int64, uu *User) (a *User, err error) {
+func UpdateUser(uid int64, uu *Account) (a *Account, err error) {
 	if u, ok := UserList[uid]; ok {
 		if uu.Username != "" {
 			u.Username = uu.Username
@@ -73,7 +73,7 @@ func UpdateUser(uid int64, uu *User) (a *User, err error) {
 		}
 		return u, nil
 	}
-	return nil, errors.New("User Not Exist")
+	return nil, errors.New("Account Not Exist")
 }
 
 func Login(username, password string) bool {
