# routers/router.go
@@ -6,18 +6,18 @@ import (
 )
 
 func init() {
-	beego.Router("/", &controllers.HomeController{})
+	//beego.Router("/", &controllers.HomeController{})
 	//beego.Router("/ws", &service.ServeWs{})
 	ns := beego.NewNamespace("/api/v1",
-		beego.NSNamespace("/object",
-			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
-		),
+		//beego.NSNamespace("/object",
+		//	beego.NSInclude(
+		//		&controllers.ObjectController{},
+		//	),
+		//),
 		//api/v1/account/login
 		beego.NSNamespace("/account",
 			beego.NSInclude(
-				&controllers.UserController{},
+				&controllers.AccountController{},
 			),
 		),
 	)
